# littletiles-obj-tool

./: .gitignore  LICENSE  LittleTilesOBJTool.spec  README.md  pyproject.toml
packaging/: build_desktop.py
scripts/: run_cli.py  run_web.py
src/littletiles_obj_tool/: __main__.py  block_map.py  bootstrap.py  cli.py  constants.py  converters.py  desktop.py  models.py  nbt_tags.py  new_format.py  obj_codec.py  old_format.py  utils.py  web.py
src/littletiles_obj_tool/static/css/: app.css
src/littletiles_obj_tool/static/js/: app.js  preview_runtime.bundle.js  preview_runtime.js
src/littletiles_obj_tool/templates/: index.html
